@@ -4,7 +4,7 @@
       "Jakob Voß"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Milla version v1.0.5, Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.133380",
+   "generated_by" : "Dist::Milla version v1.0.5, Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.132830",
    "license" : [
       "perl_5"
    ],
@@ -53,7 +53,7 @@
          "web" : "https://github.com/nichtich/Catmandu-Exporter-Table"
       }
    },
-   "version" : "v0.1.0",
+   "version" : "v0.1.1",
    "x_contributors" : [
       "Jakob Voss <voss@gbv.de>"
    ]
