@@ -11,11 +11,20 @@ Catmandu::Exporter::Table - ASCII/Markdown table exporter
     | my  | table |
     | is  | nice  |
 
+    catmandu convert CSV to Table --fields id,name --columns ID,Name < sample.csv
+    | ID | Name |
+    |----|------|
+    | 23 | foo  |
+    | 42 | bar  |
+    | 99 | doz  |
+
 # DESCRIPTION
 
 This [Catmandu::Exporter](https://metacpan.org/pod/Catmandu::Exporter) exports data in tabular form, formatted in
 MultiMarkdown syntax. The resulting format can be used for instance to display
-CSV data or to include data tables in Markdown files.
+CSV data or to include data tables in Markdown files. Newlines and vertical
+bars in table cells are replaced by a space character and cell values can be
+truncated.
 
 # CONFIGURATION
 
@@ -29,13 +38,14 @@ CSV data or to include data tables in Markdown files.
 
 - widths
 
-    Column widths. Automatically set.
+    Column widths. By default column widths are calculated automatically to the
+    width of the widest value. With cusom width, large values may be truncated.
 
 # CONTRIBUTING
 
 This module is managed it a git repository hosted at
 [https://github.com/nichtich/Catmandu-Exporter-Table](https://github.com/nichtich/Catmandu-Exporter-Table). Bug reports, feature
-requests, and pull requests are welcome. The distribution is packages with
+requests, and pull requests are welcome. The distribution is packaged with
 [Dist::Milla](https://metacpan.org/pod/Dist::Milla).
 
 # SEE ALSO
